<resources>
    <string name="app_name">Fit(X)</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_toolbar_general">General</string>
    <string name="title_fragment_body">Body</string>
    <string name="title_fragment_strength">Strength</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_normal">Normal</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_obese">Obese</string>
    <string name="bmi_morbidly_obese">Morbidly obese</string>
    <string name="activity_level_sedentary">Sedentary</string>
    <string name="activity_level_light">Light</string>
    <string name="activity_level_moderate">Moderate</string>
    <string name="activity_level_active">Active</string>
    <string name="activity_level_extreme">Extreme</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="pounds">Pounds</string>
    <string name="pounds_short">lbs</string>
    <string name="centimeters">Centimeters</string>
    <string name="kilograms">Kilograms</string>
    <string name="kilograms_short">kgs</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="bmi">BMI</string>
    <string name="calorie_intake">Calorie Intake</string>
    <string name="calorie_intake_2">Calorie\nIntake</string>
    <string name="Gender">Gender</string>
    <string name="age">Age</string>
    <string name="years">Years</string>
    <string name="activity_level">Activity Level</string>
    <string name="sedentary">Sedentary</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="calories_daily">Calories daily</string>
    <string name="general_calculators">General Calculators</string>
    <string name="macro">Macros</string>
    <string name="maintain">Maintain</string>
    <string name="muscle_gain">Gain Muscle</string>
    <string name="fat_loss">Fat Loss</string>
    <string name="goal">Goal</string>
    <string name="water_intake">Water Intake</string>
    <string name="ounces_daily">Ounces daily</string>
    <string name="mls_daily">Mls daily</string>
    <string name="ideal_weight">Ideal Weight</string>
    <string name="one_rep_max_bench_press">1RM Bench Press</string>
    <string name="one_rep_max_squat">1RM Squat</string>
    <string name="one_rep_max_deadlift">1RM Deadlift</string>
    <string name="one_rep_max_overhead_press">1RM Overhead Press</string>
    <string name="bench_press">Bench Press</string>
    <string name="squat">Squat</string>
    <string name="deadlift">Deadlift</string>
    <string name="overhead_press">Overhead Press</string>
    <string name="reps_lifted">Reps Lifted</string>
    <string name="reps">Reps</string>
    <string name="rep">Rep</string>
    <string name="one_rep_max">One Rep Max</string>
    <string name="wilks">Wilks</string>
    <string name="squat_1rm">Squat 1RM</string>
    <string name="bench_press_1rm">Bench Press 1RM</string>
    <string name="deadlift_1rm">Deadlift 1RM</string>
    <string name="ideal_physique_neck_title">Neck:</string>
    <string name="ideal_physique_shoulders_title">Shoulders:</string>
    <string name="ideal_physique_chest_title">Chest:</string>
    <string name="ideal_physique_waist_title">Waist:</string>
    <string name="ideal_physique_arm_title">Arm:</string>
    <string name="ideal_physique_forearm_title">Forearm:</string>
    <string name="ideal_physique_thigh_title">Thigh:</string>
    <string name="ideal_physique_calf_title">Calf:</string>
    <string name="ideal_physique">Ideal Physique</string>
    <string name="wrist">Wrist</string>
    <string name="ankle">Ankle</string>
    <string name="strength_standards">Strength Standards</string>
    <string name="bench">Bench</string>
    <string name="dead">Dead</string>
    <string name="novice">Novice</string>
    <string name="untrained">Untrained</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="elite">Elite</string>
    <string name="my_stats">My Stats</string>
    <string name="about">About</string>
    <string name="fitness_calculator">Fitness Calculator</string>
    <string name="donation">Donation</string>
    <string name="donate">Donate</string>
    <string name="donation_prompt">"Are you sure you'd like to donate $%d?"</string>
    <string name="strength">Strength</string>
    <string name="body">Body</string>
    <string name="stats_update_successful">Stats successfully updated</string>
    <string name="confirm_clear">Are you sure you\'d like to clear your stats?</string>
    <string name="pectoral">Pectoral</string>
    <string name="abdominal">Abdominal</string>
    <string name="thigh">Thigh</string>
    <string name="triceps">Triceps</string>
    <string name="subscapular">Subscapular</string>
    <string name="suprailiac">Suprailiac</string>
    <string name="axilla">Axilla</string>
    <string name="bodyfat">Bodyfat</string>
    <string name="bf_7_point">7 Point</string>
    <string name="bf_3_point">3 Point</string>
    <string name="millimeters">Millimeters</string>
    <string name="percent_protein">P%</string>
    <string name="percent_carbohydrates">C%</string>
    <string name="percent_fat">F%</string>
    <string name="percentage_error">Combined percentages must equal 100</string>
    <string name="daily_calorie_intake_description_title">About Daily Calorie Intake</string>
    <string name="daily_calorie_intake_description">Your daily calorie intake is the amount of calories that you should consume daily to maintain weight.\nThis takes into account your age, weight, height and activity level.\n\nThe activity levels accepted by the calculator are :\n\n- Sedentary (most of day spent sitting.)\n\n- Light (some light exercise.)\n\n- Moderate (active throughout most of the day.)\n\n- Active (physical job requiring a lot of activity.)\n\n- Extreme (physical job and exercising very often.)\n\nThis calculator will provide only an estimate and should be used as a guideline.</string>
    <string name="bmi_description">The BMI is an attempt to quantify the amount of tissue mass (muscle, fat, and bone) in an individual, and then categorize that person as underweight, normal weight, overweight, or obese based on that value.\n\nHowever, there is some debate about where on the BMI scale the dividing lines between categories should be placed.\n\nCommonly accepted BMI ranges are:\n\n- Underweight = under 18.5\n\n- Normal weight = 18.5 to 25\n\n- Overweight = 25 to 30\n\n- Obese = over 30.\n\nAs BMI does not discern between fat and muscle tissue, it is less accurate on trained individuals and athletes.</string>
    <string name="bmi_description_title">About BMI</string>
    <string name="macro_description">Macronutrients are divided into 3 groups: protein, carbohydrates and fats (excluding alcohol).\n\nThis calculator will give you an estimate as too how much of each you should be eating per day based on your fitness goals.</string>
    <string name="macro_description_title">About Macros</string>
    <string name="bodyfat_description">This calculator will give you an estimate of your current bodyfat percentage.\n\nThis will be determined using skinfold measures taken with a caliper at various locations on your body.\n\nThese locations are:\n\n- Pectoral = Between the nipple and the armpit (axilla) but closer to the armpit, approximately 1/3 the distance\n\n- Abdominal = 2 centimeters to the right of the bellybutton.\n\n- Thigh = Front side of thigh, halfway from the upper part of the knee and the fold above the thigh when the leg is raised\n\n- Triceps = Back of tricep halfway up arm.\n\n- Subscapula = Bottom tip of the shoulder blade, found by moving the arm behind the back.\n\n- Suprailiac = Just above hip bone, vertically aligned with armpit.\n\n- Axilla = Side of torso, underneath armpit at 5th rib.</string>
    <string name="bodyfat_description_title">About Bodyfat</string>
    <string name="wilks_description">The Wilks Formula is used to compare the strength of powerlifters against each other despite the different weights of the lifters.\n\nSimply enter in your one rep max for bench press, squat and deadlift and your wilks score will be calculated.</string>
    <string name="wilks_description_title">About Wilks</string>
    <string name="one_rep_max_description">This calculator will give you an estimate at what your one rep max would be for any given lift based on what you have lifted for reps.\n\nSimply enter in the weight you lifted and for how many reps and it will give you an estimate.\n\nYou can also use the arrows to calculate an max estimate for other rep ranges (between 1-12.)\n\nAdvanced users can also choose from a range of different formulas if you have a certain preference.</string>
    <string name="one_rep_max_description_title">About One Rep Max</string>
    <string name="strength_standards_description">The performance standards are adult standards (>18 years old) for a single maximal repetition (1RM) based on competitive weightlifter and powerlifting classification systems in use from the 1950\'s to present.\n\nThese are standards are divided into 5 classifications:\n\n- Untrained = An individual who has not trained on the exercises before, but can perform them correctly.\n\n- Novice = An individual who has trained regularly for up to several months.\n\n- Intermediate = An individual who has trained regularly for up to a couple years.\n\n- Advanced = An individual who has trained multiple years.\n\n- Elite = An athlete competing in strength sports.\n\nKeep in mind, the standards shown in the tables do not represent the highest level of strength performance possible.</string>
    <string name="strength_standards_description_title">About Strength Standards</string>
    <string name="ideal_physique_description">This calculator takes your wrist and ankle measurements and applies the golden ratio (1.618) to find the measurements for your ideal physique.\n\nPlease note this is an estimate and that these calculations may not necessarily be physically achievable for all people.</string>
    <string name="ideal_physique_description_title">About Ideal Physique</string>
    <string name="calories_burned_description">This calculator will give you an estimate at how much calories you will burn through various activities.\n\nSimply choose an activity, enter your bodyweight and how long you performed that activity.\n\nThe calculator uses the MET (Metabolic Equivalent) data for physical activities from "The Compendium of Physical Activities Tracking Guide" by B. E. Ainsworth to provide calorie expenditure estimations.</string>
    <string name="calories_burned_description_title">About Calories Burned</string>
    <string name="custom">Custom</string>
    <string name="custom_macros">Custom macros</string>
    <string name="calculate">Calculate</string>
    <string name="about_text">Fit(X) offers a range of calculators to help you achieve your fitness goals. From calorie intake to strength standards, you can help quantify your fitness and health to help better structure your workouts.</string>
    <string name="chest">Chest</string>
    <string name="shoulders">Shoulders</string>
    <string name="formula">Formula</string>
</resources>