<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp">

        <Button
            android:id="@+id/button_unit"
            style="@android:style/Widget.Material.Light.Button.Toggle"
            android:layout_width="72dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginBottom="-28dp"
            android:layout_marginRight="16dp"
            android:text="@string/metric"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/textview_gender"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/Gender"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio_button_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:checked="true"
                android:text="@string/female" />

        </RadioGroup>

        <TextView
            android:id="@+id/textview_age"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/age"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edittext_layout_age"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/edittext_age"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/years"
                android:imeOptions="actionGo"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textview_weight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/weight"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edittext_layout_weight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/edittext_weight"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/kilograms"
                android:imeOptions="actionGo"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textview_height"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/height"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edittext_layout_height"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edittext_height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/centimeters"
                    android:imeOptions="actionGo"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/height_inches_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:visibility="gone"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edittext_height_inches"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/inches"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textview_activity_level"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/activity_level"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textview_activity_level_amount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/sedentary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="14sp" />

        <com.rey.material.widget.Slider
            android:id="@+id/slider_activity_level"
            android:layout_width="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:sl_minValue="0"
            app:sl_maxValue="4"
            app:sl_value="0"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_ok"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/ok" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
