<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_name"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_image_height"
            android:scaleType="centerCrop"
            tools:src="@drawable/bmi_image"/>

        <TextView
            android:id="@+id/title_textview"
            fontPath="fonts/Raleway-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/body_mass_index"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#ffffff"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

    </FrameLayout>

    <Button
        android:id="@+id/button_unit"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="-28dp"
        android:layout_marginRight="16dp"
        android:text="@string/metric"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/textview_weight"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/weight"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textSize="16sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edittext_layout_weight"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <EditText
            android:id="@+id/edittext_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kilograms"
            android:imeOptions="actionGo"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textview_height"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/height"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edittext_layout_height"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/edittext_height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/centimeters"
                android:imeOptions="actionGo"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/height_inches_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:visibility="gone"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/edittext_height_inches"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/inches"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_ok"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>
