<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@color/dialogBackground">

    <include
        android:id="@+id/header_layout"
        layout="@layout/dialog_header" />

    <View
        android:layout_width="@dimen/dialog_width"
        android:layout_height="4dp"
        android:layout_marginTop="@dimen/dialog_header_height"
        android:background="@drawable/gradient" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="@dimen/dialog_header_height">

        <LinearLayout
            android:id="@+id/field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_formula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/formula"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_formula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="16dp"
                android:popupBackground="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textview_weight_lifted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/weight"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edittext_layout_weight_lifted"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edittext_weight_lifted"
                    style="@style/FitnessCalculatorTheme.EditText.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/kilograms"
                    android:imeOptions="actionGo"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textview_reps_lifted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/reps_lifted"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edittext_layout_reps_lifted"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edittext_reps_lifted"
                    style="@style/FitnessCalculatorTheme.EditText.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/reps"
                    android:imeOptions="actionGo"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/bottom_divider"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="4dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dialog_header_height"
        android:background="@drawable/gradient_reverse" />

    <include
        android:id="@+id/footer_layout"
        layout="@layout/dialog_footer" />

</FrameLayout>